force-app/main/default/objects/StripeEmail__e/StripeEmail__e.object-meta.xml
<CustomObject>
    <label>StripeEmail</label>
    <pluralLabel>StripeEmails</pluralLabel>
</CustomObject>