force-app/main/default/objects/StripeEmail__e/fields/CheckoutURL__c.field-meta.xml
<CustomField>
    <fullName>CheckoutURL__c</fullName>
    <label>CheckoutURL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>