force-app/main/default/objects/StripeEmail__e/fields/CustomerEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerEmail__c</fullName>
    <label>CustomerEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>