force-app/main/default/objects/StripeEmail__e/fields/PaymentIntentURL__c.field-meta.xml
<CustomField>
    <fullName>PaymentIntentURL__c</fullName>
    <label>PaymentIntentURL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>